WithSecure/LogisticsApp/force-app/main/default/objects/ShipmentRequest__c/ShipmentRequest__c.object-meta.xml
<CustomObject>
    <label>ShipmentRequest</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ShipmentRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>