WithSecure/LogisticsApp/force-app/main/default/objects/ShipmentRequest__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>