WithSecure/LogisticsApp/force-app/main/default/objects/ShipmentRequest__c/fields/In_Review_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Review_Start_Time__c</fullName>
    <description>When Shipment is In Review, A 5 min counter starts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>In Review Start Time</label>
    <type>DateTime</type>
</CustomField>