WithSecure/LogisticsApp/force-app/main/default/objects/ShipmentRequest__c/fields/In_Review_User__c.field-meta.xml
<CustomField>
    <fullName>In_Review_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record is in In Review by User</description>
    <inlineHelpText>Record is in In Review by User</inlineHelpText>
    <label>In Review User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ShipmentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>