WithSecure/LogisticsApp/force-app/main/default/objects/ShipmentRequest__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>